<resources>
    <string name="app_name">Chiếc nón kỳ diệu</string>
    <string name="app_title">CHIẾC NÓN KỲ DIỆU</string>

    <string name="btn_batDau">VÒNG QUAY</string>
    <string name="btn_taoPhong">TẠO PHÒNG</string>
    <string name="btn_timPhong">TÌM PHÒNG</string>
    <string name="btn_taoCauHoi">TẠO CÂU HỎI</string>
    <string name="wheel_logo">wheel logo</string>

    <string name="title_taoPhong">Tạo phòng</string>
    <string name="title_timPhong">Tìm phòng</string>
    <string name="title_tenNguoiChoi">Tên Người chơi</string>
    <string name="title_maPhong">Mã phòng</string>

    <string name="title_doiNguoiChoi">Đợi người chơi</string>
    <string name="waiting_text">Đang đợi người chơi</string>
    <string name="title_vong1">Vòng 1</string>
    <string name="question">Thủ đô của Việt Nam ở đâu?</string>
    <string name="nhap_1_ky_tu">Nhập 1 ký tự</string>
    <string name="btn_doan">Đoán</string>
    <string name="btn_doanCaTu">Giải</string>
    <string name="btn_quay">Quay</string>
    <string name="hint">Hint</string>

    <string name="title_denLuotCuaBan">Đến lượt của bạn</string>
    <string name="con_lai_x_giay">Còn lại %s s</string>
    <string name="nhap_loi_giai">Nhập lời giải</string>

    <string name="btn_thoat">Thoát</string>
    <string name="btn_next">Chơi tiếp</string>
    <string name="btn_dangNhap">Đăng nhập</string>

    <string name="title_taikhoan">Tài khoản</string>
    <string name="title_matKhau">Mật khẩu</string>
    <string name="tao_nft">TẠO NFT</string>


    <string name="title_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="title_dia_chi_vi">Địa chỉ ví NFT</string>
    <string name="title_nft">NFT</string>
    <string name="btn_dangXuat">NFT</string>

    <string name="title_kho_do">Kho đồ</string>
    <string name="title_cua_hang">Cửa hàng</string>
    <string name="title_bang_xep_hang">Bảng xếp hạng coin</string>


</resources>