<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/wheel_logo"
        android:src="@drawable/ic_wheel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
        android:layout_marginTop="20dp"
        android:text="ADMIN"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_taoPhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tao_nft"
        android:backgroundTint="@color/orange"
        android:elevation="30dp"
        android:stateListAnimator="@null"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_themCauHoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_taoCauHoi"
        android:backgroundTint="@color/orange"
        android:elevation="30dp"
        android:stateListAnimator="@null"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_taoPhong" />

    <ImageView
        android:id="@+id/img_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/wheel_logo"
        android:src="@drawable/ic_roulette"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_taoPhong" />

</androidx.constraintlayout.widget.ConstraintLayout>