<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waiting_room_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.uit.chiecnonkydieu.ui.WaitingRoomActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.AppCompat.Headline"
        app:title="@string/title_doiNguoiChoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_maPhongTitle"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_maPhong"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_maPhong"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="1234"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_maPhongTitle"
        app:layout_constraintStart_toEndOf="@+id/tv_maPhongTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_player1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:elevation="50dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maPhongTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_logo1"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_loading" />

            <TextView
                android:id="@+id/tv_playerName1"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/waiting_text" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_player2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="50dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_player1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_logo2"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_loading" />

            <TextView
                android:id="@+id/tv_playerName2"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/waiting_text" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_player3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="50dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_player2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_logo3"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_loading" />

            <TextView
                android:id="@+id/tv_playerName3"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/waiting_text" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_batDau"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/blue_200"
        android:elevation="30dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>